--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="wfZydaMj4Kbr_OrpLwv0BIRA1K9HwwFN5Plul6ZCz5k" />
+    <meta name="naver-site-verification" content="51fa4ff99f427d7396d2011949ae9738c751d617" />
     <title>필수 자동차 보험 정보 모음: 견적, 연령별, 차종별 완벽 가이드</title>
     <style>
         body {
@@ -269,4 +271,5 @@
         <p style="text-align: center; font-size: 0.8em; color: #666;">본 페이지는 다양한 자동차 보험 정보를 비교하고 연결하기 위해 생성되었습니다.</p>
     </footer>
 </body>
+
 </html>
